# openweave-core

./: .clang-format  .dist-version  .gitignore  .gitmodules  .travis.yml  BUILDING-ESP32.md  BUILDING.md  CHANGELOG  CHANGELOG.md  CHANGES  CONTRIBUTING.md  Makefile-Android  Makefile-Standalone  Makefile-bootstrap  Makefile-iOS  Makefile.am  Makefile.in  README.md  aclocal.m4  bootstrap  configure  configure.ac  repos.conf
src/: Makefile.am  Makefile.in  nlfaultinjection.cpp
src/adaptations/device-layer/: ADAPTATION-PATTERNS.md  AESBlockCipher.cpp  BLEManager.cpp  CASEAuth.cpp  CertificateProvisioningClient.cpp  ConfigurationManager.cpp  ConnectivityManager.cpp  DESIGN-NOTES.md  DeviceControlServer.cpp  DeviceDescriptionServer.cpp  DeviceIdentityTraitDataSource.cpp  DeviceNetworkInfo.cpp  ESPUtils.cpp  EchoServer.cpp  Entropy.cpp  EventLogging.cpp  EventLoggingManager.cpp  FabricProvisioningServer.cpp  GenTestDeviceIds.py  GeneralUtils.cpp  GenericConfigurationManagerImpl.cpp  GenericNetworkProvisioningServerImpl.cpp  Globals.cpp  Kconfig  Logging.cpp  Makefile.am  Makefile.in  NetworkInfo.cpp  NetworkProvisioningServer.cpp  NetworkTelemetryManager.cpp  PersistedStorage.cpp  PlatformManager.cpp  ServiceDirectoryManager.cpp  ServiceProvisioningServer.cpp  ServiceTunnelAgent.cpp  SystemEventSupport.cpp  SystemTimerSupport.cpp  TestDeviceIds.cpp  Time.cpp  TimeSyncManager.cpp  (+2 more)
src/adaptations/weave-device/: AESBlockCipher.cpp  BLEManager.cpp  CASEAuth.cpp  ConfigurationManager.cpp  ConnectivityManager.cpp  DeviceControlServer.cpp  DeviceDescriptionServer.cpp  DeviceIdentityTraitDataSource.cpp  ESPUtils.cpp  EchoServer.cpp  Entropy.cpp  FabricProvisioningServer.cpp  GenTestDeviceIds.py  Globals.cpp  Kconfig  Logging.cpp  NetworkInfo.cpp  NetworkProvisioningServer.cpp  PlatformManager.cpp  ServiceDirectoryManager.cpp  ServiceProvisioningServer.cpp  ServiceTunnelAgent.cpp  TestDeviceIds.cpp  Time.cpp  TimeSyncManager.cpp  TraitManager.cpp  Warm.cpp  component.mk
src/adaptations/weave-platform-esp32/: AESBlockCipher.cpp  CASEAuth.cpp  ConfigurationManager.cpp  ConnectivityManager.cpp  DeviceControl.cpp  DeviceControlServer.cpp  DeviceDescription.cpp  DeviceDescriptionServer.cpp  Echo.cpp  EchoServer.cpp  Entropy.cpp  EventQueue.cpp  FabricProvisioning.cpp  FabricProvisioningServer.cpp  Globals.cpp  Kconfig  Logging.cpp  LwIPCoreLock.cpp  NetworkInfo.cpp  NetworkProvisioningServer.cpp  PlatformManager.cpp  ServiceDirectoryManager.cpp  ServiceProvisioning.cpp  ServiceProvisioningServer.cpp  ServiceTunnelAgent.cpp  TestDeviceIds.cpp  Time.cpp  TimeSyncManager.cpp  Timers.cpp  Warm.cpp  WeaveLogging.cpp  WeaveServers.cpp  WeaveStack.cpp  component.mk
src/ble/: BLEEndPoint.cpp  BLEEndPoint.h  BleApplicationDelegate.h  BleConfig.h  BleError.cpp  BleError.h  BleLayer.am  BleLayer.cpp  BleLayer.h  BlePlatformDelegate.h  BleUUID.cpp  BleUUID.h  Makefile.in  WeaveBleServiceData.h  WoBle.cpp  WoBle.h
src/device-manager/: AndroidBleApplicationDelegate.cpp  AndroidBlePlatformDelegate.cpp  AndroidBlePlatformDelegate.h  BuiltInTraitSchemaDirectory.cpp  DeviceManager.am  GenericTraitDataSink.cpp  GenericTraitDataSink.h  LocaleSettingsTrait.cpp  LocaleSettingsTrait.h  Makefile.am  Makefile.in  TraitSchemaDirectory.h  WeaveDataManagementClient.cpp  WeaveDataManagementClient.h  WeaveDeviceManager-JNI.cpp  WeaveDeviceManager.cpp  WeaveDeviceManager.h  WeavePlatformPersistedStorage.cpp  WoBleTest.cpp  WoBleTest.h
src/device-manager/cocoa/: Base64Encoding.h  Base64Encoding.mm  Makefile.am  Makefile.in  NLGenericTraitUpdatableDataSink.h  NLGenericTraitUpdatableDataSink.mm  NLGenericTraitUpdatableDataSink_Protected.h  NLHKDF.h  NLHKDF.mm  NLIdentifyDeviceCriteria.h  NLIdentifyDeviceCriteria.mm  NLIdentifyDeviceCriteria_Protected.h  NLLogging.h  NLNetworkInfo.h  NLNetworkInfo.mm  (+57 more)
src/examples/: .gitignore  Makefile.am  Makefile.in  weave-app-common.cpp  weave-app-common.h  weave-echo-app-tutorial.md
src/include/: BuildConfig.h.in  Makefile.am  Makefile.in
src/inet/: AsyncDNSResolverSockets.cpp  AsyncDNSResolverSockets.h  DNSResolver.cpp  DNSResolver.h  EndPointBasis.cpp  EndPointBasis.h  IPAddress-StringFuncts.cpp  IPAddress.cpp  IPAddress.h  IPEndPointBasis.cpp  IPEndPointBasis.h  IPPrefix.cpp  IPPrefix.h  InetConfig.h  InetError.cpp  InetError.h  InetFaultInjection.cpp  InetFaultInjection.h  InetInterface.cpp  InetInterface.h  InetLayer.am  InetLayer.cpp  InetLayer.h  InetLayerBasis.cpp  InetLayerBasis.h  Makefile.am  Makefile.in  RawEndPoint.cpp  RawEndPoint.h  TCPEndPoint.cpp  TCPEndPoint.h  TunEndPoint.cpp  TunEndPoint.h  UDPEndPoint.cpp  UDPEndPoint.h
src/lib/: Makefile.am  Makefile.in
src/lwip/: Makefile.am  Makefile.in  TapInterface.c  lwipopts.h
src/ra-daemon/: Makefile.am  Makefile.in  RADaemon.cpp  RADaemon.h
src/system/: Makefile.am  Makefile.in  SystemClock.cpp  SystemClock.h  SystemConfig.h  SystemError.cpp  SystemError.h  SystemEvent.h  SystemFaultInjection.cpp  SystemFaultInjection.h  SystemLayer.am  SystemLayer.cpp  SystemLayer.h  SystemLayerPrivate.h  SystemMutex.cpp  SystemMutex.h  SystemObject.h  SystemPacketBuffer.cpp  SystemPacketBuffer.h  SystemStats.cpp  SystemStats.h  SystemTimer.cpp  SystemTimer.h
src/test-apps/: .gitignore  AndroidTest.cpp  CASEOptions.cpp  CASEOptions.h  CertProvOptions.cpp  CertProvOptions.h  Certs.cpp  ComplexMockTrait.proto  DMTestClient.h  DeviceDescOptions.cpp  DeviceDescOptions.h  GenMsgEncTestVectors.py  GenerateEventLog.cpp  KeyExportOptions.cpp  KeyExportOptions.h  Makefile.am  Makefile.in  MockBleApplicationDelegate.cpp  MockBleApplicationDelegate.h  MockBlePlatformDelegate.cpp  MockBlePlatformDelegate.h  MockCAService.cpp  MockCAService.h  MockCPClient.cpp  MockCPClient.h  MockDCLPServer.cpp  MockDCLPServer.h  MockDCServer.cpp  MockDCServer.h  MockDDServer.cpp  MockDDServer.h  MockDMPublisher.cpp  MockDMPublisher.h  MockEvents.cpp  MockEvents.h  MockExternalEvents.cpp  MockExternalEvents.h  MockFPServer.cpp  MockFPServer.h  MockIAServer.cpp  (+212 more)
src/warm/: Makefile.am  Makefile.in  Warm.am  Warm.h  WarmConfig.h  WarmCore.cpp
(+1735 files in other folders)
